--- a/templates/partials/infocards/_researcher-card.html
+++ b/templates/partials/infocards/_researcher-card.html
@@ -1,17 +1,4 @@
 {% load static %}
-<style>
-    .subscribed-icon{
-        background: #ef6c00;
-        color: white;
-        margin-left: 15px;
-        font-size: 12px;
-        padding: 8px;
-        border-radius: 50%;
-    }
-    .dashcard-header-wrapper{
-        display: flex
-    }
-</style>
 <div class="dashcard">
   <div class="flex-this">
     <div class="researcher-img-container">
@@ -23,7 +10,7 @@
       />
     </div>
     <div class="flex-this column dashcard-text-container">
-      <div class="dashcard-header-wrapper">
+      <div class="subscribed-icon-wrapper">
         <h3 class="dashcard-h3 darkteal-text">
           {% firstof researcher.user.get_full_name researcher.user.username %}
         </h3>
