--- a/templates/public.html
+++ b/templates/public.html
@@ -345,7 +345,12 @@
                 >
             </div>
             <div class="flex-this column dashcard-text-container">
-                <div><h3 class="dashcard-h3">{% firstof researcher.user.get_full_name researcher.user.username %}</h3></div>
+                <div class="subscribed-icon-wrapper">
+                    <h3 class="dashcard-h3">{% firstof researcher.user.get_full_name researcher.user.username %}</h3>
+                    {% if researcher and researcher.is_subscribed %}
+                        <i class="fa fa-check subscribed-icon" title="Subscribed"></i>
+                    {% endif %}
+                </div>
                 <div>
                     <p class="dashcard-subheader">Researcher | {{ researcher.user.user_profile.get_location }} </p>
                 </div>
