--- a/templates/projects/projects.html
+++ b/templates/projects/projects.html
@@ -28,17 +28,20 @@
             {% else %}
                 <div class="flex-this align-center">
                     <a
-                       {% if create_restricted_message %}
-                           class="primary-btn margin-top-2 disabled-btn"
-                           title="{{ create_restricted_message }}"
-                       {% else %}
-                           class="primary-btn green-btn margin-top-2"
-                           href="{% url 'researcher-create-project' researcher.id %}"
-                       {% endif %}
-
+                    {% if not researcher.is_subscribed or subscription.project_count == 0 %}
+                        class="primary-btn margin-top-2 block disabled-btn"
+                        title="{% if not researcher.is_subscribed %}
+                        The subscription process of your account is not completed yet.
+                        {% else %}
+                        Your account has reached its Project limit.
+                        {% endif %}"
+                    {% else %}
+                        class="primary-btn green-btn margin-top-2"
+                        href="{% url 'researcher-create-project' researcher.id %}"
+                    {% endif %}
                     >
-                        Create a Project <i class="fa fa-arrow-right"></i>
-                    </a>
+                    Create a Project <i class="fa fa-arrow-right"></i>
+                </a>
                 </div>
             {% endif %}
         </div>
