Updated hover-info message style for invitation page

--- a/localcontexts/static/css/main.css
+++ b/localcontexts/static/css/main.css
@@ -435,6 +435,7 @@ button[disabled],
     position: relative;
 }
 .btn-help-text {
+    font-weight: lighter;
     position: absolute;
     right: 295px;
     z-index: 1;
