feat: updated html

--- a/templates/partials/infocards/_researcher-card.html
+++ b/templates/partials/infocards/_researcher-card.html
@@ -15,7 +15,7 @@
           {% firstof researcher.user.get_full_name researcher.user.username %}
         </h3>
           {% if researcher and researcher.is_subscribed %}
-            <i class="fa fa-check subscribed-icon" title="Subscribed"></i>
+            <i class="fa-sharp fa-solid fa-circle-check subscribed-icon fa-lg" title="Subscribed"></i>
           {% endif %}
       </div>
       <div>
