--- a/templates/public.html
+++ b/templates/public.html
@@ -348,7 +348,7 @@
                 <div class="subscribed-icon-wrapper">
                     <h3 class="dashcard-h3">{% firstof researcher.user.get_full_name researcher.user.username %}</h3>
                     {% if researcher and researcher.is_subscribed %}
-                        <i class="fa fa-check subscribed-icon" title="Subscribed"></i>
+                        <i class="fa-sharp fa-solid fa-circle-check subscribed-icon fa-lg" title="Subscribed"></i>
                     {% endif %}
                 </div>
                 <div>
