Resolved the linting erros

--- a/templates/account_settings_pages/_subscription.html
+++ b/templates/account_settings_pages/_subscription.html
@@ -8,7 +8,7 @@
   <div class="flex-this space-between">
     <div><h4 class="no-bottom-margin no-top-margin">Subscription Details</h4></div>
   </div>
-  {% if True %}
+  {% if renew %}
     <p class="italic red-text"><small>This subscription for this account has expired. Please renew your subscription.</small></p>
     <div>
       <button type="submit" class="primary-btn action-btn" name="generatebtn">Renew Subscription</button>
