quick fix for #86886vqv4 Admin invite role not appearing

--- a/templates/accounts/member-invitations.html
+++ b/templates/accounts/member-invitations.html
@@ -62,7 +62,7 @@
                                         <i>
                                             {% if invite.role == 'viewer' %} Viewer {% endif %}
                                             {% if invite.role == 'editor' %} Editor {% endif %}
-                                            {% if invite.role == 'Admin' %} Administrator {% endif %}
+                                            {% if invite.role == 'admin' %} Administrator {% endif %}
                                         </i>
                                         <br>
 
@@ -121,7 +121,7 @@
                                         <i>
                                             {% if invite.role == 'viewer' %} Viewer {% endif %}
                                             {% if invite.role == 'editor' %} Editor {% endif %}
-                                            {% if invite.role == 'Admin' %} Administrator {% endif %}
+                                            {% if invite.role == 'admin' %} Administrator {% endif %}
                                         </i>
                                         <br>
 
