--- a/templates/partials/infocards/_institution-card.html
+++ b/templates/partials/infocards/_institution-card.html
@@ -9,9 +9,12 @@
             >
         </div>
         <div class="{% if  institution.is_submitted %} flex-this column dashcard-text-container {% else %} flex-this column dashcard-text-container  disable {%endif%}">
-            <div><h3 class="dashcard-h3 darkteal-text">
-                {{ institution }}
-            </h3></div>
+            <div class="subscribed-icon-wrapper">
+                <h3 class="dashcard-h3 darkteal-text">{{ institution }}</h3>
+                {% if institution and institution.is_subscribed %}
+                    <i class="fa-sharp fa-solid fa-circle-check subscribed-icon fa-lg" title="Subscribed"></i>
+                {% endif %}
+            </div>
             <div>
                 <p class="dashcard-subheader">
                     Institution | Members: {% if institution.get_member_count < 10 %}0{{ institution.get_member_count }}{% else %}{{ institution.get_member_count }}{% endif %} | 
