--- a/templates/public.html
+++ b/templates/public.html
@@ -95,7 +95,12 @@
                 >
             </div>
             <div class="flex-this column dashcard-text-container">
-                <div><h3 class="dashcard-h3">{{ community }}</h3></div>
+                <div class="subscribed-icon-wrapper">
+                    <h3 class="dashcard-h3">{{ community }}</h3>
+                    {% if community and community.is_approved %}
+                        <i class="fa-sharp fa-solid fa-circle-check subscribed-icon fa-lg" title="Subscribed"></i>
+                    {% endif %}
+                </div>
                 <div>
                     <p class="dashcard-subheader">Community | {{ community.get_location }} </p>
                 </div>
