--- a/templates/public.html
+++ b/templates/public.html
@@ -231,7 +231,12 @@
                 >
             </div>
             <div class="flex-this column dashcard-text-container">
-                <div><h3 class="dashcard-h3">{{ institution }}</h3></div>
+                <div class="subscribed-icon-wrapper">
+                    <h3 class="dashcard-h3">{{ institution }}</h3>
+                    {% if institution and institution.is_subscribed %}
+                        <i class="fa-sharp fa-solid fa-circle-check subscribed-icon fa-lg" title="Subscribed"></i>
+                    {% endif %}
+                </div>
                 <div>
                     <p class="dashcard-subheader">Institution | {{ institution.get_location }} </p>
                 </div>
