feat: community approved icon shows "Active" instead of "Subscribed"

--- a/templates/public.html
+++ b/templates/public.html
@@ -98,7 +98,7 @@
                 <div class="subscribed-icon-wrapper">
                     <h3 class="dashcard-h3">{{ community }}</h3>
                     {% if community and community.is_approved %}
-                        <i class="fa-sharp fa-solid fa-circle-check subscribed-icon fa-lg" title="Subscribed"></i>
+                        <i class="fa-sharp fa-solid fa-circle-check subscribed-icon fa-lg" title="Active"></i>
                     {% endif %}
                 </div>
                 <div>
