--- a/templates/partials/infocards/_institution-dashcard.html
+++ b/templates/partials/infocards/_institution-dashcard.html
@@ -1,7 +1,7 @@
 {% load static %}{% load custom_institution_tags %}
 
     <div class="dashcard">
-        
+
         <!-- Top Nav -->
         <div class="flex-this w-100 space-between">
             <div class="loc grey-text bold">
@@ -36,7 +36,12 @@
                     >
                 </div>
                 <div class="flex-this column dashcard-text-container">
-                    <div><h3 class="dashcard-h3 darkteal-text">{{ institution.institution_name }}</h3></div>
+                    <div class="subscribed-icon-wrapper">
+                        <h3 class="dashcard-h3 darkteal-text">{{ institution.institution_name }}</h3>
+                        {% if institution and institution.is_subscribed %}
+                            <i class="fa-sharp fa-solid fa-circle-check subscribed-icon fa-lg" title="Subscribed"></i>
+                        {% endif %}
+                    </div>
                     <div>
                         <p class="primary-black-text dashcard-subheader">Institution |  
                         {% if member_role == 'admin' %} Administrator {% endif %}
