--- a/templates/partials/infocards/_researcher-dashcard.html
+++ b/templates/partials/infocards/_researcher-dashcard.html
@@ -34,8 +34,13 @@
             </div>
 
             <div class="flex-this column dashcard-text-container">
-                    <div>
-                        <h3 class="dashcard-h3 darkteal-text">{% firstof researcher.user.get_full_name researcher.user.username %}</h3>
+                    <div class="subscribed-icon-wrapper">
+                        <h3 class="dashcard-h3 darkteal-text">
+                          {% firstof researcher.user.get_full_name researcher.user.username %}
+                        </h3>
+                        {% if researcher and researcher.is_subscribed %}
+                          <i class="fa-sharp fa-solid fa-circle-check subscribed-icon fa-lg" title="Subscribed"></i>
+                        {% endif %}
                     </div>
                     <div>
                         <p class="dashcard-subheader">Researcher | {% if researcher.primary_institution %}{{ researcher.primary_institution }}{% endif %}<br>
