--- a/templates/partials/infocards/_community-dashcard.html
+++ b/templates/partials/infocards/_community-dashcard.html
@@ -37,7 +37,12 @@
                     >
                 </div>
                 <div class="flex-this column dashcard-text-container">
-                    <div><h3 class="dashcard-h3 darkteal-text">{{ community.community_name }}</h3></div>
+                    <div class="subscribed-icon-wrapper">
+                        <h3 class="dashcard-h3 darkteal-text">{{ community.community_name }}</h3>
+                        {% if community and community.is_approved %}
+                            <i class="fa-sharp fa-solid fa-circle-check subscribed-icon fa-lg" title="Active"></i>
+                        {% endif %}
+                    </div>
                     <div>
                         <p class="primary-black-text dashcard-subheader">Community | 
                             {% if member_role == 'admin' %} Administrator {% endif %}
