add icons to institution cconnection template, adjust logic slightly

--- a/templates/communities/connections.html
+++ b/templates/communities/connections.html
@@ -23,7 +23,7 @@
                 <div class="flex-this column dashcard-text-container">
                     <div class="subscribed-icon-wrapper">
                         <h3 class="dashcard-h3 darkteal-text">{{ institution }}</h3>
-                        {% if institution and institution.is_subscribed %}
+                        {% if institution.is_subscribed %}
                             <i class="fa-sharp fa-solid fa-circle-check subscribed-icon fa-lg" title="Subscribed"></i>
                         {% endif %}
                     </div>
@@ -91,7 +91,7 @@
                         <h3 class="dashcard-h3 darkteal-text">
                           {% firstof researcher.user.get_full_name researcher.user.username %}
                         </h3>
-                        {% if researcher and researcher.is_subscribed %}
+                        {% if researcher.is_subscribed %}
                           <i class="fa-sharp fa-solid fa-circle-check subscribed-icon fa-lg" title="Subscribed"></i>
                         {% endif %}
                     </div>
@@ -153,7 +153,7 @@
                 <div class="flex-this column dashcard-text-container">
                     <div class="subscribed-icon-wrapper">
                         <h3 class="dashcard-h3 darkteal-text">{{ comm }}</h3>
-                        {% if comm and comm.is_approved %}
+                        {% if comm.is_approved %}
                             <i class="fa-sharp fa-solid fa-circle-check subscribed-icon fa-lg" title="Active"></i>
                         {% endif %}
                     </div>
