--- a/templates/institutions/connections.html
+++ b/templates/institutions/connections.html
@@ -21,7 +21,12 @@
                 >
             </div>
             <div class="flex-this column dashcard-text-container">
-                <div><h3 class="dashcard-h3 darkteal-text">{{ inst }}</h3></div>
+                <div class="subscribed-icon-wrapper">
+                    <h3 class="dashcard-h3 darkteal-text">{{ inst.institution_name }}</h3>
+                    {% if inst.is_subscribed %}
+                        <i class="fa-sharp fa-solid fa-circle-check subscribed-icon fa-lg" title="Subscribed"></i>
+                    {% endif %}
+                </div>
                 <div>
                     <p class="dashcard-subheader">Institution | Members: {% if inst.get_member_count < 10 %}0{{ inst.get_member_count }}{% else %}{{ inst.get_member_count }}{% endif %} | 
                         Location: {{ inst.get_location }}
@@ -79,7 +84,12 @@
                 >
             </div>
             <div class="flex-this column dashcard-text-container">
-                <div><h3 class="dashcard-h3 darkteal-text">{% firstof researcher.user.get_full_name researcher.user.username %}</h3></div>
+                <div class="subscribed-icon-wrapper">
+                    <h3 class="dashcard-h3 darkteal-text">{% firstof researcher.user.get_full_name researcher.user.username %}</h3>
+                    {% if researcher.is_subscribed %}
+                        <i class="fa-sharp fa-solid fa-circle-check subscribed-icon fa-lg" title="Subscribed"></i>
+                    {% endif %}
+                </div>
                 <div>
                     <p class="dashcard-subheader">Researcher | Location: {{ profile.get_location }} </p>
                 </div>
@@ -137,6 +147,12 @@
             </div>
             <div class="flex-this column dashcard-text-container">
                 <div><h3 class="dashcard-h3 darkteal-text">{{ community }}</h3></div>
+                <div class="subscribed-icon-wrapper">
+                    <h3 class="dashcard-h3 darkteal-text">{{ community.community_name }}</h3>
+                    {% if community.is_subscribed %}
+                        <i class="fa-sharp fa-solid fa-circle-check subscribed-icon fa-lg" title="Subscribed"></i>
+                    {% endif %}
+                </div>
                 <div>
                     <p class="dashcard-subheader">Community | Members: {% if community.get_member_count < 10 %}0{{ community.get_member_count }}{% else %}{{ community.get_member_count }}{% endif %} | 
                         Location: {{ community.get_location }}
