unconfirmed community project download tooltip update

--- a/templates/partials/_project-actions.html
+++ b/templates/partials/_project-actions.html
@@ -845,8 +845,9 @@
                                 {% if 'sandbox.localcontextshub' in request.get_host %}
                                     Project cannot be downloaded on the sandbox site.
                                 {% else %}
-                                    The account that created this Project needs
-                                    to be subscribed before download is available.
+                                    The account that created this Project needs to be 
+                                    {% if creator.community %} confirmed {% else %} subscribed {% endif %}
+                                    before download is available.
                                 {% endif %}
                             </span>
                         </div> 
