--- a/localcontexts/static/css/main.css
+++ b/localcontexts/static/css/main.css
@@ -425,23 +425,21 @@ button[disabled],
 /* Hover over text for disabled buttons */
 .btn-help-text {
     display: block;
+    position: absolute;
     margin-top: 8px;
+    padding: 8px 16px;
+    border-radius: 4px;
     font-size: 14px;
     color: #fff;
     visibility: hidden;
-}
-
-.btn-with-helptext button {
-    position: relative;
-}
-.btn-help-text {
-    position: absolute;
-    left: 1080px;
+    right: 5px;
+    z-index: 1;
     width: 250px;
     background-color: #EF6C00;
-    padding: 8px 16px;
-    font-size: 14px;
-    border-radius: 4px;
+}
+
+.btn-with-helptext {
+    position: relative;
 }
 
 .btn-with-helptext:hover .btn-help-text {
@@ -1454,12 +1452,17 @@ i[data-tooltip]:hover:after {
     pointer-events: none;
 }
 
-.otc-dropdown {
+/* dropdown button */
+.circle-dropdown {
     position: relative;
     display: inline-block;
+    block-size: fit-content;
 }
 
-.otc-dropdown-content {
+.circle-dropdown .fa-circle-ellipsis { color: #007385; }
+.circle-dropdown .fa-circle-ellipsis:hover { color: #338F9D; }
+
+.circle-dropdown-content {
     display: none;
     position: absolute;
     min-width: 200px;
@@ -1467,24 +1470,26 @@ i[data-tooltip]:hover:after {
     z-index: 1;
     right:0;
     border-radius: 4px;
-    border: 1px #E6F1F3 solid;
+    border: 1px #DDDDDD solid;
+    background-color: #FFFFFF;
 }
 
-.otc-dropdown-content a {
+.circle-dropdown-content a {
     padding: 12px 16px;
     text-decoration: none;
-    display: block;
+    display: flex;
+    justify-content: space-between;
+    font-weight: normal;
+    color:#000;
 }
 
-.otc-dropdown .otc-dropdown-content a.blue-btn:hover {
-    background-color: #338F9D;
-    color: #fff;
-    border-radius: 4px;
+.circle-dropdown .circle-dropdown-content a:hover:not(.disabled-btn) {
+    background-color: #E8F1F3;
 }
 
-.otc-dropdown:hover .otc-dropdown-content {display: block;}
+.circle-dropdown:hover .circle-dropdown-content { display: block; }
 
-.otc-dropdown-content .primary-btn {border-radius: 0;}
+.circle-dropdown-content .primary-btn { border-radius: 0; }
 
 /* Account settings: image upload */
 
