--- a/templates/partials/_notices.html
+++ b/templates/partials/_notices.html
@@ -8,13 +8,15 @@
 </div>
 
 <div class="content-card content-card-space white-bg">
+
     <div class="flex-this space-between">
         <div><h2 class="no-top-margin">Engagement Notice</h2></div>
+
         <div class="flex-this flex-end">
-            <div class="margin-right-16 otc-dropdown">
-                <button class="primary-btn action-btn">Options</button>
-                <div class="otc-dropdown-content">
-                    <a id="addURLBtn" class="primary-btn blue-btn">Add Link <i class="fa-solid fa-circle-plus"></i></a>
+            <div class="margin-right-16 circle-dropdown">
+                <i class="pointer fa-solid fa-circle-ellipsis fa-3x"></i>
+                <div class="circle-dropdown-content">
+                    <a id="addURLBtn" class="primary-btn">Add Link <i class="fa-regular fa-link-simple"></i></a>
                     {% if otc_download_perm == 1 %}
                         <a
                             {% if researcher %}
@@ -35,22 +37,24 @@
                                 class="primary-btn blue-btn"
                                 href="{% url 'download-open-to-collaborate-notice-institution' perm=otc_download_perm institution_id=institution.id %}"
                             {% endif %}
-                            >
-                            Download Notice <i class="fa-solid fa-download"></i>
+                            >                            
+                            Download Notice <i class="fa-regular fa-arrow-down-to-line"></i>
                         </a>
                         {% if urls %}
-                            <a id="shareBtn" class="primary-btn blue-btn">Share Notice <i class="fa-solid fa-share-nodes"></i></a>
+                            <a id="shareBtn" class="primary-btn">Share Notice <i class="fa-solid fa-share-nodes"></i></a>
                         {% else %}
                             <a id="addURLBtn" class="primary-btn disabled-btn" title="Add a link in order to share the Notice.">Share <i class="fa-solid fa-share-nodes"></i></a>
                         {% endif %}
                     {% else %}
-                        <a class="primary-btn disabled-btn" title="{% if institution %}{% if not institution.is_approved %}Your institution account needs to be confirmed in order to download this Notice.{% endif %}{% endif %}{% if is_sandbox %}Download of Notices is not available on the sandbox site.{% endif %}">Download Notice <i class="fa-solid fa-download"></i></a>
-                        <a id="addURLBtn" class="primary-btn disabled-btn" title="{% if institution %}{% if not institution.is_approved %}Your institution account needs to be confirmed in order to share this Notice.{% endif %}{% endif %}{% if is_sandbox %}Sharing of Notices is not available on the sandbox site.{% endif %}">Share <i class="fa-solid fa-share-nodes"></i></a>
+                        <a class="primary-btn disabled-btn" title="{% if institution %}{% if not institution.is_approved %}Your institution account needs to be confirmed in order to download this Notice.{% endif %}{% endif %}{% if is_sandbox %}Download of Notices is not available on the sandbox site.{% endif %}">Download Notice <i class="fa-regular fa-arrow-down-to-line"></i></a>
+                        <a class="primary-btn disabled-btn" title="{% if institution %}{% if not institution.is_approved %}Your institution account needs to be confirmed in order to share this Notice.{% endif %}{% endif %}{% if is_sandbox %}Sharing of Notices is not available on the sandbox site.{% endif %}">Share <i class="fa-solid fa-share-nodes"></i></a>
                     {% endif %}
                 </div>
             </div>
         </div>
+
     </div>
+
     <div class="flex-this">
         <div><img loading="lazy" class="pointer-event-none" src="{% static 'images/notices/ci-open-to-collaborate.png' %}" width="119px" alt="Open to Collaborate Notice icon. Black square with the top right corner folded and two white hands reaching toward each other from top to bottom over a white horizontal rectangle."></div>
         <div class="flex-this column margin-left-16">
@@ -579,7 +583,7 @@
                     <button class="copy-btn btn-in-input" data-target="profilePageUrlToCopy">Copy URL</button>
                 </div>
 
-                <label class="bold margin-top-8 no-bottom-margin block">Embed OTC Notice</label>
+                <label class="bold margin-top-8 no-bottom-margin block">Embed Open to Collaborate Notice</label>
                 <p class="font-size-14 no-top-margin margin-bottom-8">Add this Notice to your website by copying the code below.</p>
 
                 <div class="text-input-to-copy">
