Improved code quality

--- a/localcontexts/static/css/main.css
+++ b/localcontexts/static/css/main.css
@@ -245,6 +245,7 @@ input:focus {
 .margin-left-16 { margin-left: 16px; }
 .margin-left-55 { margin-left: 55%; }
 .margin-right-16 { margin-right: 16px; }
+.margin-right-31 { margin-right: 31%; }
 .margin-top-16 { margin-top: 16px; }
 .margin-bottom-16 { margin-bottom: 16px; }
 .no-top-pad { padding-top: 0; }
