--- a/templates/settings-base.html
+++ b/templates/settings-base.html
@@ -6,7 +6,7 @@
 >
   <h2 class="no-top-margin">User Settings</h2>
 
-  <div class="flex-this w-100">
+  <div class="flex-this w-100 margin-bottom-2">
     <div class="side-nav-container">
       <a class="side-nav-a" href="{% url 'update-profile' %}">
         <div
