--- a/templates/partials/_update-account.html
+++ b/templates/partials/_update-account.html
@@ -5,7 +5,7 @@
 <div class="content-card content-card-space white-bg flex-this column">
     <h2 class="no-top-margin">Account Settings</h2>
 
-    <div class="flex-this w-100">
+    <div class="flex-this w-100 margin-bottom-2">
 
         <div class="side-nav-container">
             <a href="{% if community %}{% url 'update-community' community.id %}{% endif %}{% if institution %}{% url 'update-institution' institution.id %}{% endif %}{% if researcher %}{% url 'update-researcher' researcher.id %}{% endif %}">
